drone/drone-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-server
  namespace: kube-ops
spec:
  selector:
    matchLabels:
      app: drone-server
  replicas: 1
  template:
    metadata:
      labels:
        app: drone-server
    spec:
      containers:
        - image: drone/drone:1.9.0
          imagePullPolicy: Always
          name: drone-server
          volumeMounts:
            - name: drone-server-sqlite-db
              mountPath: /var/lib/drone
      volumes:
        - name: drone-server-sqlite-db
          persistentVolumeClaim:
            claimName: drone-pvc
